Toolbar cambiada, y switch puesto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">T1v1</string>
+    <string name="Estados2">¿Has consumido tomaco alguna vez?</string>
 </resources>
