--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">T1v1</string>
     <string name="Estados2">¿Has consumido tomaco alguna vez?</string>
+    <string name="Cantidad">¿Cantidad de veces que has consumido Tomaco?</string>
+    <string name="Cantidad2">Escribe aqui el numero</string>
 </resources>
