--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="bSi">Si</string>
     <string name="bNo">No</string>
     <string name="limpiar">Limpiar valores</string>
+    <string name="opciones">Opciones</string>
 </resources>
